# mair-old

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: build.rs
src/mair/: lib.rs  parse.rs
src/mair/namesp/: mod.rs  run_once.rs  tree.rs
src/mair/parse/: ast.rs  error.rs  grammar.lalrpop  grammar.rs  lexer.rs  mod.rs  parser.rs  putback_stream.rs  token.rs  ttstream.rs
src/sense/: interface.rs  lib.rs  parse.rs
tests/: parse_test.rs
tests/lexer_large/: lexer.in  lexer.out
tests/lexer_unit/: comment_doc.in  comment_doc.out  identifier.in  identifier.out  lifetime.in  lifetime.out  number.in  number.out  string_char.in  string_char.out
tests/parser_large/: hand.in  hand.out  real.in  real.out
tests/tts_large/: tts.in  tts.out
tests/tts_simple/: tts.in  tts.out
