[package]
name = "mair"
version = "0.1.0"
authors = ["uHOOCCOOHu <uHOOCCOOHu@users.noreply.github.com>"]
build = "build.rs"

[lib]
name = "mair"
path = "src/mair/lib.rs"

[[bin]]
name = "mair"
path = "src/bin/main.rs"
doc = false

[build-dependencies]
lalrpop = "0.13.0"

[dependencies]
lazy_static = "0.2.8"
lalrpop-util = "0.13.0"
regex = "0.2.1"
