[package]
name = "mair"
version = "0.1.0"
authors = ["uHOOCCOOHu <hooccooh1896@gmail.com>"]
build = "src/build.rs"
include = ["Cargo.toml", "src/**/*"]

[lib]
name = "mair"
path = "src/mair/lib.rs"

[[bin]]
name = "mair"
path = "src/bin/main.rs"
doc = false

[features]
default = []

[build-dependencies]
lalrpop = "0.13.0"

[dependencies]
lazy_static = "0.2.8"
lalrpop-util = "0.13.0"
regex = "0.2.1"

[dependencies.clippy]
version = "*"
optional = true
