[package]
name = "mair"
version = "0.1.0"
authors = ["uHOOCCOOHu <hooccooh1896@gmail.com>"]
include = ["Cargo.toml", "src/**/*"]

[lib]
name = "mair"
path = "src/mair/lib.rs"

[[bin]]
name = "mair"
path = "src/bin/main.rs"
doc = false

[features]
default = []

[build-dependencies]

[dependencies]
lazy_static = "0.2.8"
regex = "0.2.1"

[dependencies.clippy]
version = "0.0.155"
optional = true
